@@ -204,7 +204,15 @@ div.code
 
 .tour-item
 {
-  min-height: 200px;
+  width: 48%;
+  float:left;
+  margin-left: 1%;
+  margin-right: 1%;
+}
+
+.clearboth
+{
+  clear: both;
 }
 
 #warningbox
