@@ -9,7 +9,7 @@
     <meta name="description" content="Cheese" />
 
 
-   <link rel="stylesheet" media="all" href="data/shadowbox/css/shadowbox-light.css"/>
+   <link rel="stylesheet" media="all" href="data/shadowbox/css/shadowbox.css"/>
     <script type="text/javascript" src="data/shadowbox/js/yui-utilities.js"></script>
     <script type="text/javascript" src="data/shadowbox/js/shadowbox-yui.js"></script>
     <script type="text/javascript" src="data/shadowbox/js/shadowbox.js"></script>
@@ -17,7 +17,7 @@
     window.onload = function(){
       var options = {
         handleUnsupported:  'remove',
-        loadingImage:       'data/shadowbox/images/loading-light.gif'
+        loadingImage:       'data/shadowbox/images/loading.gif'
       };
       Shadowbox.init(options);
     };
@@ -54,152 +54,154 @@
 
       <div id="bottom">
 
-        <div id="left" style="padding-left: 1%;">
-
-          <div class="tour-item">
-            <h2>Cheese!</h2>
-            <div class="imager">
-              <a rel="shadowbox" href="data/screenshots/cheese-2.24.0-main.jpg">
-                <img src="data/tour/cheese-main.jpg" alt="icon" />
-              </a>
-            </div>
-            <p>
-            Cheese is an program for the Gnome Desktop which allows you to take
-            photos, videos, and anything else you can think of with your webcam.
-            <br/>
-            Just start it up
-            and shoot! Gather all of your friends around, have some fun! Share
-            your taken photos and videos with 'em!
-            </p>
+        <div class="tour-item">
+          <h2>Cheese!</h2>
+          <div class="imager">
+            <a title="Cheese!" rel="shadowbox[tour]" href="data/screenshots/cheese-2.24.0-main.jpg">
+              <img src="data/tour/cheese-main.jpg" alt="icon" />
+            </a>
           </div>
-
-          <div class="tour-item" style="min-height: 275px;">
-            <h2>Add Cheesy Effects</h2>
-            <div class="imagel">
-              <a rel="shadowbox" href="data/screenshots/cheese-2.24.0-effects.jpg">
-                <img src="data/tour/cheese-effects.jpg" alt="icon" />
-              </a>
-            </div>
-            <p>
-            Sick and tired of looking at the same face over and over again,
-            want to be something else? Cheese allows
-            you to add many different effects to photos, even multiple at a time! There are
-            heaps of effect combinations to choose from that will keep you smiling.
-            Morph yourself into Hulk or a nice pink alien, or even pile up effects in
-            order to obtain the most amazing results!
-            </p>
-          </div>
-
-          <div class="tour-item">
-            <h2>Go to Hollywood</h2>
-            <div class="imager">
-              <img src="data/tour/cheese-video.jpg" alt="icon" />
-            </div>
-            <p>
-            Cheese does not only allow you to take great photos, it also allows you to take
-            videos. Effects, sharing, and everything that you can do with photos you can
-            also do with videos as well. Instead of preparing for that one
-            moment, invite some friends, record your session and laugh about it afterwards.
-            So Mr. Kubrick, go ahead and present us your new
-            Hollywood-movie! Or do you want to be a music star and record the
-            video to your new song?
-            </p>
-          </div>
-
-          <div class="tour-item">
-            <h2>Kiosk/Fullscreen mode</h2>
-            <div class="imagel">
-              <a rel="shadowbox" href="data/screenshots/cheese-2.24.0-fullscreen.jpg">
-                <img src="data/tour/cheese-fullscreen.jpg" alt="icon" />
-              </a>
-            </div>
-            <p>
-            Did you ever want to set up a computer with Cheese on it in the
-            lobby of your office? Did you ever want to have Cheese running at a
-            party with a lot of people? This and much more is just a click
-            away: enter the fullscreen mode and enjoy Cheese on the whole
-            display! Attention: If you try this at a party, this can lead to
-            Cheese-affection, which means that everybody will be standing in front
-            of your webcam and not drinking your beer anymore ;)
-            </p>
-          </div>
-
+          <p>
+          Cheese is an program for the Gnome Desktop which allows you to take
+          photos, videos, and anything else you can think of with your webcam.
+          <br/>
+          Just start it up
+          and shoot! Gather all of your friends around, have some fun! Share
+          your taken photos and videos with 'em!
+          </p>
         </div>
 
-        <div id="right" style="padding-right: 1%;">
-
-          <div class="tour-item">
-            <h2>3... 2... 1... Cheese!</h2>
-            <div class="imager">
-              <a rel="shadowbox" href="data/screenshots/cheese-2.24.0-countdown.jpg">
-              <img src="data/tour/cheese-countdown.jpg" alt="icon" />
-              </a>
-            </div>
-            <p>
-            The countdown widget will let you get into
-            position, or wreck everything, before the photo that you want is
-            taken. The visual countdown will appear at the bottom of the image,
-            and will give you time to press the take photo button, and
-            get ready! So if you need to put your eye makeup on, be fast, you
-            just have 3 seconds!
-            </p>
+        <div class="tour-item">
+          <h2>3... 2... 1... Cheese!</h2>
+          <div class="imager">
+            <a title="3... 2... 1... Cheese!" rel="shadowbox[tour]" href="data/screenshots/cheese-2.24.0-countdown.jpg">
+            <img src="data/tour/cheese-countdown.jpg" alt="icon" />
+            </a>
           </div>
-
-          <div class="tour-item">
-            <h2>Share your Photos and Videos</h2>
-            <div class="imagel">
-              <a rel="shadowbox" href="data/screenshots/cheese-2.24.0-share.jpg">
-              <img src="data/tour/cheese-share.jpg" alt="icon" />
-              </a>
-            </div>
-            <p>
-            Finished taking photos and movies? Then go ahead and share your files to your
-            friends and family! You can export them to F-Spot, put them on Flickr, mail
-            them or use them as your account photo in GNOME. You can also save them to your
-            disk to do anything you want with them, the possibilities are endless.
-            With nautilus-sendto installed, you even have further
-            possibilieties to share your photos and movies!
-            Cheese makes it super easy to share yor photos and videos.
-            </p>
-          </div>
-
-          <div class="tour-item" style="min-height: 275px;">
-            <h2>Addicted to webcams?</h2>
-            <div class="imagel">
-              <img src="data/tour/cheese-prefs.jpg" alt="icon" />
-            </div>
-            <p>
-            You have several webcams? You can't stop taking photos of yourself
-            and your friends? The only reason you have USB-Ports is to attach
-            Webcams?<br/>
-            With Cheese 2.24, you now can switch between your installed webcams
-            with just one click! Just open the shiny new preference dialog and
-            choose your favoured webcam. You can also set the resolution of
-            your webcam there! So, get all your webcams out of your locker,
-            attach them to your computer and play with them!
-            </p>
-          </div>
-
-          <div class="tour-item">
-            <h2>Endless Possibilities</h2>
-            <div class="imager">
-              <a rel="shadowbox" href="data/screenshots/cheese-2.24.0-countdown.jpg">
-                <img src="data/tour/cheese-about.jpg" alt="icon" />
-              </a>
-            </div>
-            <p>
-            Don't stop there, find out what you can do with Cheese today! Install
-            Cheese and have fun, send us your funniest photos and videos, share
-            your fun with others. If you want more features or have some great
-            ideas what we could do to make Cheese even rock more, do not hesitate
-            to contact us or to fill a bug at our bug tracking website.
-            </p>
-          </div>
-
-          <div style="position: absolute; right: 1em; margin-top: 105px; font-size: 0.85em; font-style: italic;">
-            Text by Joshua Henderson and daniel g. siegel
-          </div>
+          <p>
+          The countdown widget will let you get into
+          position, or wreck everything, before the photo that you want is
+          taken. The visual countdown will appear at the bottom of the image,
+          and will give you time to press the take photo button, and
+          get ready! So if you need to put your eye makeup on, be fast, you
+          just have 3 seconds!
+          </p>
         </div>
+
+        <br class="clearboth">
+
+        <div class="tour-item">
+          <h2>Add Cheesy Effects</h2>
+          <div class="imagel">
+            <a title="Add Cheesy Effects" rel="shadowbox[tour]" href="data/screenshots/cheese-2.24.0-effects.jpg">
+              <img src="data/tour/cheese-effects.jpg" alt="icon" />
+            </a>
+          </div>
+          <p>
+          Sick and tired of looking at the same face over and over again,
+          want to be something else? Cheese allows
+          you to add many different effects to photos, even multiple at a time! There are
+          heaps of effect combinations to choose from that will keep you smiling.
+          Morph yourself into Hulk or a nice pink alien, or even pile up effects in
+          order to obtain the most amazing results!
+          </p>
+        </div>
+
+        <div class="tour-item">
+          <h2>Share your Photos and Videos</h2>
+          <div class="imagel">
+            <a title="Share your Photos and Videos" rel="shadowbox[tour]" href="data/screenshots/cheese-2.24.0-share.jpg">
+            <img src="data/tour/cheese-share.jpg" alt="icon" />
+            </a>
+          </div>
+          <p>
+          Finished taking photos and movies? Then go ahead and share your files to your
+          friends and family! You can export them to F-Spot, put them on Flickr, mail
+          them or use them as your account photo in GNOME. You can also save them to your
+          disk to do anything you want with them, the possibilities are endless.
+          With nautilus-sendto installed, you even have further
+          possibilieties to share your photos and movies!
+          Cheese makes it super easy to share yor photos and videos.
+          </p>
+        </div>
+
+        <br class="clearboth">
+
+        <div class="tour-item">
+          <h2>Go to Hollywood</h2>
+          <div class="imager">
+            <img src="data/tour/cheese-video.jpg" alt="icon" />
+          </div>
+          <p>
+          Cheese does not only allow you to take great photos, it also allows you to take
+          videos. Effects, sharing, and everything that you can do with photos you can
+          also do with videos as well. Instead of preparing for that one
+          moment, invite some friends, record your session and laugh about it afterwards.
+          So Mr. Kubrick, go ahead and present us your new
+          Hollywood-movie! Or do you want to be a music star and record the
+          video to your new song?
+          </p>
+        </div>
+
+        <div class="tour-item">
+          <h2>Addicted to webcams?</h2>
+          <div class="imagel">
+            <img src="data/tour/cheese-prefs.jpg" alt="icon" />
+          </div>
+          <p>
+          You have several webcams? You can't stop taking photos of yourself
+          and your friends? The only reason you have USB-Ports is to attach
+          Webcams?<br/>
+          With Cheese 2.24, you now can switch between your installed webcams
+          with just one click! Just open the shiny new preference dialog and
+          choose your favoured webcam. You can also set the resolution of
+          your webcam there! So, get all your webcams out of your locker,
+          attach them to your computer and play with them!
+          </p>
+        </div>
+
+        <br class="clearboth">
+
+        <div class="tour-item">
+          <h2>Kiosk/Fullscreen mode</h2>
+          <div class="imagel">
+            <a title="Kiosk/Fullscreen mode" rel="shadowbox[tour]" href="data/screenshots/cheese-2.24.0-fullscreen.jpg">
+              <img src="data/tour/cheese-fullscreen.jpg" alt="icon" />
+            </a>
+          </div>
+          <p>
+          Did you ever want to set up a computer with Cheese on it in the
+          lobby of your office? Did you ever want to have Cheese running at a
+          party with a lot of people? This and much more is just a click
+          away: enter the fullscreen mode and enjoy Cheese on the whole
+          display! Attention: If you try this at a party, this can lead to
+          Cheese-affection, which means that everybody will be standing in front
+          of your webcam and not drinking your beer anymore ;)
+          </p>
+        </div>
+
+        <div class="tour-item">
+          <h2>Endless Possibilities</h2>
+          <div class="imager">
+            <a title="Endless Possibilities" rel="shadowbox[tour]" href="data/screenshots/cheese-2.24.0-countdown.jpg">
+              <img src="data/tour/cheese-about.jpg" alt="icon" />
+            </a>
+          </div>
+          <p>
+          Don't stop there, find out what you can do with Cheese today! Install
+          Cheese and have fun, send us your funniest photos and videos, share
+          your fun with others. If you want more features or have some great
+          ideas what we could do to make Cheese even rock more, do not hesitate
+          to contact us or to fill a bug at our bug tracking website.
+          </p>
+        </div>
+
+        <br class="clearboth">
+
+        <div style="float: right; font-size: 0.85em; font-style: italic;">
+          Text by Joshua Henderson and daniel g. siegel
+        </div>
+
       </div><!-- bottom -->
     </div><!-- body -->
 
