@@ -1,3 +1,12 @@
+2008-09-23  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/data/shadowbox/css/shadowbox.css,
+	  www.gnome.org/projects/cheese/data/shadowbox/images/loading.gif,
+	  www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
+	  www.gnome.org/projects/cheese/Makefile.am,
+	  www.gnome.org/projects/cheese/tour.html: 
+	  enhance the css and javascript of the tour
+
 2008-09-22  daniel g. siegel <dgsiegel@gmail.com>
 
 	* www.gnome.org/projects/cheese/download.html,
